# molecular-access

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  Makefile  README.md  TC-mingw.cmake  compose.yaml  flake.nix  molaccess.nix  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml  fedora.yml  format.yml  main.yml  mingw.yml  nix.yml  tests.yml
apps/molaccessd/: cli.py
apps/molmessg/: cli.py
client/: CMakeLists.txt
client/include/: molecular-client.hpp
client/src/: main.cpp  molecular-client.cpp
core/: CMakeLists.txt
core/include/: molaccess.hpp  molaccess_ipc.hpp
core/src/: molaccess.cpp  molecular-daemon.cpp
core/src/bindings/: CMakeLists.txt  Setup.py  molacces_python.c  molacces_python.h  molacces_python_wrapper.pyx  molaccess_python.cpp  molaccess_python.hpp  molecular.i
daemon/: CMakeLists.txt
daemon/include/: molecular-daemon.hpp
daemon/src/: main.cpp  molecular-daemon.cpp
docs/: DEPENDENCIES.md
docs/spec/: RESOURCE_REQUEST_METHODS.md
misc/containers/alpine/mingw/: Dockerfile  compose.yaml
misc/containers/fedora/fedora-release/: Dockerfile  compose.yaml
misc/integration/tasks/: ci_compose.sh  format.sh  lint.sh  lintfix.sh  nix_container.sh  tests.molmsg  tests.sh
misc/nix/: molaccess.nix  molaccess_core.nix  molaccess_python.nix
misc/nix/dependencies/: libipc.nix
tests/: CMakeLists.txt
tests/bindings/src/: main.py
tests/python/: README.md  client.py  molaccessd_test.py  molecular_test_common.py  molmessg_test.py  run_bindings_test.sh  run_message_test.sh  server.py  thread_test.py
tests/python/bindings/src/: README.md  client.py  main.py  molecular_test_common.py  run.sh  server.py
tests/python/callback/src/: main.py
tests/route/src/: main.cpp
tests/sanity/src/: main.cpp
